k8s/api-service/api-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: api-service
  name: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: api-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: api-sa  
      automountServiceAccountToken: false
      containers:
        - image: andela007/api-service:latest
          name: api-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
