k8s/api-service/api-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: api-service
  name: api-service
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: api-service
